--- a/index.html
+++ b/index.html
@@ -1781,6 +1781,11 @@
                 <p class="portfolio-description">
                     Architects of the Agentic Economy. Autonomous systems redefining enterprise productivity.
                 </p>
+                <div style="margin-top: 1rem; padding-top: 1rem; border-top: 1px solid rgba(255, 255, 255, 0.1);">
+                    <a href="https://agentrifyai.com" target="_blank" rel="noopener noreferrer" style="color: var(--accent-gold); text-decoration: none; font-size: 0.9rem; font-weight: 600;" onclick="window.open('https://agentrifyai.com', '_blank'); return false;">
+                        agentrifyai.com →
+                    </a>
+                </div>
                 <span class="portfolio-investment">$4.5M</span>
             </div>
 
@@ -1791,6 +1796,11 @@
                 <p class="portfolio-description">
                     AI-driven child & adolescent digital wellness platform with privacy-preserving systems.
                 </p>
+                <div style="margin-top: 1rem; padding-top: 1rem; border-top: 1px solid rgba(255, 255, 255, 0.1);">
+                    <a href="https://safeguardai.me" target="_blank" rel="noopener noreferrer" style="color: var(--accent-gold); text-decoration: none; font-size: 0.9rem; font-weight: 600;" onclick="window.open('https://safeguardai.me', '_blank'); return false;">
+                        safeguardai.me →
+                    </a>
+                </div>
                 <span class="portfolio-investment">$3.2M</span>
             </div>
 
@@ -1801,6 +1811,11 @@
                 <p class="portfolio-description">
                     Agentic AI platforms for enterprise intelligence with brain-inspired architectures.
                 </p>
+                <div style="margin-top: 1rem; padding-top: 1rem; border-top: 1px solid rgba(255, 255, 255, 0.1);">
+                    <a href="https://hypermindq.ai" target="_blank" rel="noopener noreferrer" style="color: var(--accent-gold); text-decoration: none; font-size: 0.9rem; font-weight: 600;" onclick="window.open('https://hypermindq.ai', '_blank'); return false;">
+                        hypermindq.ai →
+                    </a>
+                </div>
                 <span class="portfolio-investment">$2.5M</span>
             </div>
 
@@ -1811,16 +1826,26 @@
                 <p class="portfolio-description">
                     Conversational AI for early childhood education with adaptive curriculum.
                 </p>
+                <div style="margin-top: 1rem; padding-top: 1rem; border-top: 1px solid rgba(255, 255, 255, 0.1);">
+                    <a href="https://evolearn.me" target="_blank" rel="noopener noreferrer" style="color: var(--accent-gold); text-decoration: none; font-size: 0.9rem; font-weight: 600;" onclick="window.open('https://evolearn.me', '_blank'); return false;">
+                        evolearn.me →
+                    </a>
+                </div>
                 <span class="portfolio-investment">$2.1M</span>
             </div>
 
             <div class="portfolio-card">
-                <div class="company-logo">ZA</div>
-                <h4>ZAC AI Lab</h4>
+                <div class="company-logo" style="background-image: url('https://github.com/clarence1212/images/blob/main/ecosmartglobal-logo.png?raw=true'); background-size: contain; background-repeat: no-repeat; background-position: center; background-color: white; font-size: 0;">ES</div>
+                <h4>Eco Smart Global</h4>
                 <p class="portfolio-stage">Seed • 2024</p>
                 <p class="portfolio-description">
-                    Generative AI & edge intelligence solutions for multi-industry applications.
+                    Generative AI & edge intelligence solutions for multi-industry applications with sustainable technology focus.
                 </p>
+                <div style="margin-top: 1rem; padding-top: 1rem; border-top: 1px solid rgba(255, 255, 255, 0.1);">
+                    <a href="https://ecosmartglobal.co" target="_blank" rel="noopener noreferrer" style="color: var(--accent-gold); text-decoration: none; font-size: 0.9rem; font-weight: 600;" onclick="window.open('https://ecosmartglobal.co', '_blank'); return false;">
+                        ecosmartglobal.co →
+                    </a>
+                </div>
                 <span class="portfolio-investment">$1.8M</span>
             </div>
 
@@ -1831,6 +1856,11 @@
                 <p class="portfolio-description">
                     AI-powered senior care & companionship platform with virtual caregiver services.
                 </p>
+                <div style="margin-top: 1rem; padding-top: 1rem; border-top: 1px solid rgba(255, 255, 255, 0.1);">
+                    <a href="https://carepal.me" target="_blank" rel="noopener noreferrer" style="color: var(--accent-gold); text-decoration: none; font-size: 0.9rem; font-weight: 600;" onclick="window.open('https://carepal.me', '_blank'); return false;">
+                        carepal.me →
+                    </a>
+                </div>
                 <span class="portfolio-investment">$1.5M</span>
             </div>
 
@@ -1841,6 +1871,11 @@
                 <p class="portfolio-description">
                     AI-driven smart energy & sustainability solutions with virtual power plant tech.
                 </p>
+                <div style="margin-top: 1rem; padding-top: 1rem; border-top: 1px solid rgba(255, 255, 255, 0.1);">
+                    <a href="https://ecologicalautomation.co.nz" target="_blank" rel="noopener noreferrer" style="color: var(--accent-gold); text-decoration: none; font-size: 0.9rem; font-weight: 600;" onclick="window.open('https://ecologicalautomation.co.nz', '_blank'); return false;">
+                        ecologicalautomation.co.nz →
+                    </a>
+                </div>
                 <span class="portfolio-investment">$1.2M</span>
             </div>
 
