--- a/index.html
+++ b/index.html
@@ -1121,7 +1121,7 @@
         }
 
         .sarah-avatar {
-            background-image: url('https://images.unsplash.com/photo-1580489944761-15a19d654956?w=200&h=200&fit=crop&crop=face');
+            background-image: url('https://github.com/clarence1212/images/blob/main/sarah.png?raw=true');
         }
 
         .nikola-avatar {
@@ -1129,23 +1129,23 @@
         }
 
         .michael-avatar {
-            background-image: url('https://images.unsplash.com/photo-1556157382-97eda2d62296?w=200&h=200&fit=crop&crop=face');
+            background-image: url('https://github.com/clarence1212/images/blob/main/michael.png?raw=true');
         }
 
         .priya-avatar {
-            background-image: url('https://images.unsplash.com/photo-1559839734-2b71ea197ec2?w=200&h=200&fit=crop&crop=face');
+            background-image: url('https://github.com/clarence1212/images/blob/main/priya.png?raw=true');
         }
 
         .victoria-avatar {
-            background-image: url('https://images.unsplash.com/photo-1573496359142-b8d87734a5a2?w=200&h=200&fit=crop&crop=face');
+            background-image: url('https://github.com/clarence1212/images/blob/main/victoria.png?raw=true');
         }
 
         .james-avatar {
-            background-image: url('https://images.unsplash.com/photo-1560250097-0b93528c311a?w=200&h=200&fit=crop&crop=face');
+            background-image: url('https://github.com/clarence1212/images/blob/main/james.png?raw=true');
         }
 
         .david-avatar {
-            background-image: url('https://images.unsplash.com/photo-1519085360753-af0119f7cbe7?w=200&h=200&fit=crop&crop=face');
+            background-image: url('https://github.com/clarence1212/images/blob/main/david.png?raw=true');
         }
 
         .leader-content h4 {
@@ -2064,7 +2064,7 @@
             <div class="leader-card">
                 <div class="leader-avatar sarah-avatar"></div>
                 <div class="leader-content">
-                    <h4>Sarah Chen, CPA, MBA</h4>
+                    <h4>Amanda Chen, CPA, MBA</h4>
                     <p class="leader-title">Partner, Strategy & Operations</p>
                     <p class="leader-bio">
                         Former senior partner at leading global consulting firms with extensive experience in 
@@ -2090,7 +2090,7 @@
             <div class="leader-card">
                 <div class="leader-avatar michael-avatar"></div>
                 <div class="leader-content">
-                    <h4>Michael Zhang, PhD</h4>
+                    <h4>Sam Zhang, PhD</h4>
                     <p class="leader-title">Partner, Technology & Innovation</p>
                     <p class="leader-bio">
                         Former partner at a leading global strategy consulting firm with deep expertise in 
@@ -2103,7 +2103,7 @@
             <div class="leader-card">
                 <div class="leader-avatar priya-avatar"></div>
                 <div class="leader-content">
-                    <h4>Dr. Priya Sharma, MD, MBA</h4>
+                    <h4>Dr. Kristina Sharma, MD, MBA</h4>
                     <p class="leader-title">Partner, Healthcare & Life Sciences</p>
                     <p class="leader-bio">
                         Former healthcare practice leader at a top-tier consulting firm with clinical background. 
@@ -2129,7 +2129,7 @@
             <div class="leader-card">
                 <div class="leader-avatar james-avatar"></div>
                 <div class="leader-content">
-                    <h4>James Liu, CFA</h4>
+                    <h4>Sunny Liu, CFA</h4>
                     <p class="leader-title">Partner, Financial Services & Risk</p>
                     <p class="leader-bio">
                         Former investment professional at a leading global investment bank with deep expertise 
@@ -2142,7 +2142,7 @@
             <div class="leader-card">
                 <div class="leader-avatar david-avatar"></div>
                 <div class="leader-content">
-                    <h4>David Kim</h4>
+                    <h4>Vikas Agrawal</h4>
                     <p class="leader-title">Industry Partnerships Director</p>
                     <p class="leader-bio">
                         Former APAC Managing Director at a major global consulting firm with extensive experience 
