Update leader name from Clarence Tan to Elias Kairos Chen

--- a/index.html
+++ b/index.html
@@ -2050,7 +2050,7 @@
             <div class="leader-card">
                 <div class="leader-avatar clarence-avatar"></div>
                 <div class="leader-content">
-                    <h4>Dr. Clarence Tan, PhD</h4>
+                    <h4>Dr. Elias Kairos Chen, PhD, MBA, MPA</h4>
                     <p class="leader-title">Managing Partner & Chief Executive Officer</p>
                     <p class="leader-bio">
                         Elite combination of scientific excellence and strategic leadership. PhD in AI and 
